export const snapshot = {};

snapshot[`scan a basic function 1`] = `
[
  {
    char: 1,
    lexeme: "function",
    line: 1,
    literal: "function",
    type: 38,
  },
  {
    char: 10,
    lexeme: "foo",
    line: 1,
    literal: "foo",
    type: 28,
  },
  {
    char: 13,
    lexeme: "(",
    line: 1,
    literal: "(",
    type: 14,
  },
  {
    char: 14,
    lexeme: "x",
    line: 1,
    literal: "x",
    type: 28,
  },
  {
    char: 15,
    lexeme: ":",
    line: 1,
    literal: ":",
    type: 3,
  },
  {
    char: 17,
    lexeme: "list<number>",
    line: 1,
    literal: "list<number>",
    type: 28,
  },
  {
    char: 29,
    lexeme: ")",
    line: 1,
    literal: ")",
    type: 22,
  },
  {
    char: 31,
    lexeme: "{",
    line: 1,
    literal: "{",
    type: 12,
  },
  {
    char: 3,
    lexeme: "return",
    line: 2,
    literal: "return",
    type: 47,
  },
  {
    char: 10,
    lexeme: "1",
    line: 2,
    literal: "1",
    type: 30,
  },
  {
    char: 11,
    lexeme: ";",
    line: 2,
    literal: ";",
    type: 23,
  },
  {
    char: 1,
    lexeme: "}",
    line: 3,
    literal: "}",
    type: 20,
  },
  {
    char: 0,
    lexeme: "",
    line: 3,
    type: 52,
  },
]
`;

snapshot[`scan a basic theorem 1`] = `
[
  {
    char: 1,
    lexeme: "theorem",
    line: 1,
    literal: "theorem",
    type: 50,
  },
  {
    char: 9,
    lexeme: "|foo works|",
    line: 1,
    literal: "|foo works|",
    type: 28,
  },
  {
    char: 20,
    lexeme: "(",
    line: 1,
    literal: "(",
    type: 14,
  },
  {
    char: 21,
    lexeme: "x",
    line: 1,
    literal: "x",
    type: 28,
  },
  {
    char: 22,
    lexeme: ":",
    line: 1,
    literal: ":",
    type: 3,
  },
  {
    char: 24,
    lexeme: "number",
    line: 1,
    literal: "number",
    type: 28,
  },
  {
    char: 30,
    lexeme: ")",
    line: 1,
    literal: ")",
    type: 22,
  },
  {
    char: 32,
    lexeme: "{",
    line: 1,
    literal: "{",
    type: 12,
  },
  {
    char: 3,
    lexeme: "return",
    line: 2,
    literal: "return",
    type: 47,
  },
  {
    char: 10,
    lexeme: "foo",
    line: 2,
    literal: "foo",
    type: 28,
  },
  {
    char: 13,
    lexeme: "(",
    line: 2,
    literal: "(",
    type: 14,
  },
  {
    char: 14,
    lexeme: "x",
    line: 2,
    literal: "x",
    type: 28,
  },
  {
    char: 15,
    lexeme: ")",
    line: 2,
    literal: ")",
    type: 22,
  },
  {
    char: 17,
    lexeme: ">",
    line: 2,
    literal: ">",
    type: 11,
  },
  {
    char: 19,
    lexeme: "0",
    line: 2,
    literal: "0",
    type: 30,
  },
  {
    char: 1,
    lexeme: "}",
    line: 3,
    literal: "}",
    type: 20,
  },
  {
    char: 0,
    lexeme: "",
    line: 3,
    type: 52,
  },
]
`;

snapshot[`scan a basic main 1`] = `
[
  {
    char: 1,
    lexeme: "main",
    line: 1,
    literal: "main",
    type: 41,
  },
  {
    char: 6,
    lexeme: "{",
    line: 1,
    literal: "{",
    type: 12,
  },
  {
    char: 3,
    lexeme: "print",
    line: 2,
    literal: "print",
    type: 46,
  },
  {
    char: 8,
    lexeme: "(",
    line: 2,
    literal: "(",
    type: 14,
  },
  {
    char: 9,
    lexeme: '"hello, world!"',
    line: 2,
    literal: '"hello, world!"',
    type: 29,
  },
  {
    char: 24,
    lexeme: ")",
    line: 2,
    literal: ")",
    type: 22,
  },
  {
    char: 25,
    lexeme: ";",
    line: 2,
    literal: ";",
    type: 23,
  },
  {
    char: 1,
    lexeme: "}",
    line: 3,
    literal: "}",
    type: 20,
  },
  {
    char: 0,
    lexeme: "",
    line: 3,
    type: 52,
  },
]
`;

snapshot[`scan a basic const 1`] = `
[
  {
    char: 1,
    lexeme: "const",
    line: 1,
    literal: "const",
    type: 33,
  },
  {
    char: 7,
    lexeme: "*foo*",
    line: 1,
    literal: "*foo*",
    type: 28,
  },
  {
    char: 13,
    lexeme: "=",
    line: 1,
    literal: "=",
    type: 8,
  },
  {
    char: 15,
    lexeme: "1_000_000/1_000",
    line: 1,
    literal: "1000000/1000",
    type: 30,
  },
  {
    char: 30,
    lexeme: ";",
    line: 1,
    literal: ";",
    type: 23,
  },
  {
    char: 29,
    lexeme: "",
    line: 1,
    type: 52,
  },
]
`;

snapshot[`scan a basic struct 1`] = `
[
  {
    char: 1,
    lexeme: "struct",
    line: 1,
    literal: "struct",
    type: 48,
  },
  {
    char: 8,
    lexeme: "foo",
    line: 1,
    literal: "foo",
    type: 28,
  },
  {
    char: 11,
    lexeme: "(",
    line: 1,
    literal: "(",
    type: 14,
  },
  {
    char: 12,
    lexeme: "x",
    line: 1,
    literal: "x",
    type: 28,
  },
  {
    char: 13,
    lexeme: ":",
    line: 1,
    literal: ":",
    type: 3,
  },
  {
    char: 15,
    lexeme: "number",
    line: 1,
    literal: "number",
    type: 28,
  },
  {
    char: 21,
    lexeme: ",",
    line: 1,
    literal: ",",
    type: 4,
  },
  {
    char: 23,
    lexeme: "y",
    line: 1,
    literal: "y",
    type: 28,
  },
  {
    char: 24,
    lexeme: ":",
    line: 1,
    literal: ":",
    type: 3,
  },
  {
    char: 26,
    lexeme: "number",
    line: 1,
    literal: "number",
    type: 28,
  },
  {
    char: 32,
    lexeme: ")",
    line: 1,
    literal: ")",
    type: 22,
  },
  {
    char: 33,
    lexeme: ";",
    line: 1,
    literal: ";",
    type: 23,
  },
  {
    char: 32,
    lexeme: "",
    line: 1,
    type: 52,
  },
]
`;

snapshot[`scan a basic assert 1`] = `
[
  {
    char: 1,
    lexeme: "assert",
    line: 1,
    literal: "assert",
    type: 31,
  },
  {
    char: 7,
    lexeme: "(",
    line: 1,
    literal: "(",
    type: 14,
  },
  {
    char: 8,
    lexeme: "x",
    line: 1,
    literal: "x",
    type: 28,
  },
  {
    char: 10,
    lexeme: ">",
    line: 1,
    literal: ">",
    type: 11,
  },
  {
    char: 12,
    lexeme: "0",
    line: 1,
    literal: "0",
    type: 30,
  },
  {
    char: 13,
    lexeme: ")",
    line: 1,
    literal: ")",
    type: 22,
  },
  {
    char: 14,
    lexeme: ";",
    line: 1,
    literal: ";",
    type: 23,
  },
  {
    char: 13,
    lexeme: "",
    line: 1,
    type: 52,
  },
]
`;

snapshot[`scan a basic print 1`] = `
[
  {
    char: 1,
    lexeme: "print",
    line: 1,
    literal: "print",
    type: 46,
  },
  {
    char: 6,
    lexeme: "(",
    line: 1,
    literal: "(",
    type: 14,
  },
  {
    char: 7,
    lexeme: '"hello,
world!"',
    line: 2,
    literal: '"hello,
world!"',
    type: 29,
  },
  {
    char: 22,
    lexeme: ")",
    line: 2,
    literal: ")",
    type: 22,
  },
  {
    char: 23,
    lexeme: ";",
    line: 2,
    literal: ";",
    type: 23,
  },
  {
    char: 22,
    lexeme: "",
    line: 2,
    type: 52,
  },
]
`;

snapshot[`scan a basic return 1`] = `
[
  {
    char: 1,
    lexeme: "return",
    line: 1,
    literal: "return",
    type: 47,
  },
  {
    char: 8,
    lexeme: "1",
    line: 1,
    literal: "1",
    type: 30,
  },
  {
    char: 9,
    lexeme: ";",
    line: 1,
    literal: ";",
    type: 23,
  },
  {
    char: 8,
    lexeme: "",
    line: 1,
    type: 52,
  },
]
`;

snapshot[`scan a basic assign 1`] = `
[
  {
    char: 1,
    lexeme: "x",
    line: 1,
    literal: "x",
    type: 28,
  },
  {
    char: 3,
    lexeme: "=",
    line: 1,
    literal: "=",
    type: 8,
  },
  {
    char: 5,
    lexeme: "1",
    line: 1,
    literal: "1",
    type: 30,
  },
  {
    char: 6,
    lexeme: ";",
    line: 1,
    literal: ";",
    type: 23,
  },
  {
    char: 5,
    lexeme: "",
    line: 1,
    type: 52,
  },
]
`;

snapshot[`scan some operators 1`] = `
[
  {
    char: 1,
    lexeme: "==",
    line: 1,
    literal: "==",
    type: 7,
  },
  {
    char: 4,
    lexeme: ">=",
    line: 1,
    literal: ">=",
    type: 10,
  },
  {
    char: 7,
    lexeme: "<=",
    line: 1,
    literal: "<=",
    type: 15,
  },
  {
    char: 10,
    lexeme: "!=",
    line: 1,
    literal: "!=",
    type: 1,
  },
  {
    char: 13,
    lexeme: "<",
    line: 1,
    literal: "<",
    type: 16,
  },
  {
    char: 15,
    lexeme: ">",
    line: 1,
    literal: ">",
    type: 11,
  },
  {
    char: 17,
    lexeme: "=",
    line: 1,
    literal: "=",
    type: 8,
  },
  {
    char: 19,
    lexeme: ".",
    line: 1,
    literal: ".",
    type: 6,
  },
  {
    char: 21,
    lexeme: "*",
    line: 1,
    literal: "*",
    type: 27,
  },
  {
    char: 23,
    lexeme: "/",
    line: 1,
    literal: "/",
    type: 25,
  },
  {
    char: 25,
    lexeme: "+",
    line: 1,
    literal: "+",
    type: 19,
  },
  {
    char: 27,
    lexeme: "-",
    line: 1,
    literal: "-",
    type: 17,
  },
  {
    char: 29,
    lexeme: "**",
    line: 1,
    literal: "**",
    type: 26,
  },
  {
    char: 31,
    lexeme: ";",
    line: 1,
    literal: ";",
    type: 23,
  },
  {
    char: 30,
    lexeme: "",
    line: 1,
    type: 52,
  },
]
`;

snapshot[`scan a commnet 1`] = `
[
  {
    char: 1,
    lexeme: "a",
    line: 1,
    literal: "a",
    type: 28,
  },
  {
    char: 3,
    lexeme: "=",
    line: 1,
    literal: "=",
    type: 8,
  },
  {
    char: 5,
    lexeme: "1",
    line: 1,
    literal: "1",
    type: 30,
  },
  {
    char: 6,
    lexeme: ";",
    line: 1,
    literal: ";",
    type: 23,
  },
  {
    char: 7,
    lexeme: "",
    line: 1,
    type: 52,
  },
]
`;
